# cpuspin

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
src/: .gitignore  Makefile.am  cpuspin.1  cpuspin.c
